main/default/objects/Learning_Assignment__c/fields/Evaluation_Result__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Result__c</fullName>
    <label>Evaluation Result</label>
    <picklist>
        <picklistValues>
            <fullName>Passed</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Failed</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>N/A</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>