main/default/objects/Learning_Assignment__c/fields/Evaluation_Times_Taken__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Times_Taken__c</fullName>
    <label>Evaluation Times Taken</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>