main/default/objects/Learning_Assignment__c/fields/Is_Test_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag indicates that this assignment is created for preview purposes while creating new Learnings</description>
    <inlineHelpText>This flag indicates that this assignment is created for preview purposes while creating new Learnings</inlineHelpText>
    <label>Is Test Assignment</label>
    <type>Checkbox</type>
</CustomField>