main/default/objects/Learning_Assignment__c/fields/Last_Published_Learning_Version_Decision__c.field-meta.xml
<CustomField>
    <fullName>Last_Published_Learning_Version_Decision__c</fullName>
    <label>Last Published Learning Version Decision</label>
    <picklist>
        <picklistValues>
            <fullName>New version taken</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Keep using old version</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>