main/default/objects/Learning_Assignment__c/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning</label>
    <referenceTo>Learning__c</referenceTo>
    <relationshipLabel>Learning Assignments</relationshipLabel>
    <relationshipName>Learning_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>