main/default/objects/Learning_Assignment__c/fields/Learning_Version__c.field-meta.xml
<CustomField>
    <fullName>Learning_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Learning Version</label>
    <referenceTo>Learning_Version__c</referenceTo>
    <relationshipLabel>Learning Assignments (Learning Version)</relationshipLabel>
    <relationshipName>Learning_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>