main/default/objects/Learning_Assignment__c/fields/Progress_Text__c.field-meta.xml
<CustomField>
    <fullName>Progress_Text__c</fullName>
    <formula>TEXT(Progress__c)</formula>
    <label>Progress Text</label>
    <type>Text</type>
</CustomField>