main/default/objects/Learning_Assignment__c/fields/Shared_Learning_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Shared_Learning_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Learning Assignment</label>
    <referenceTo>Shared_Learning_Assignment__c</referenceTo>
    <relationshipLabel>Learning Assignments</relationshipLabel>
    <relationshipName>Learning_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>