main/default/objects/Learning_Assignment__c/fields/User_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Notes__c</fullName>
    <label>User Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>