main/default/objects/Learning_Assignment__c/listViews/My_Assignments.listView-meta.xml
<ListView>
    <fullName>My_Assignments</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>User__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Learning__c</columns>
    <columns>Learning_Version__c</columns>
    <columns>Progress__c</columns>
    <columns>Progress_Percentage__c</columns>
    <columns>Last_Published_Learning_Version__c</columns>
    <columns>Last_Published_Learning_Version_Decision__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Assignments</label>
</ListView>